@@ -96,7 +96,7 @@ DEPRECATED = {
 }
 
 ALLOWED_IN_BODY = {
-    NS.xhtml.address, NS.xhtml.article, NS.xhtml.blockquote, NS.xhtml.del, NS.xhtml.div,
+    NS.xhtml.address, NS.xhtml.article, NS.xhtml.blockquote, f'{NS.xhtml.de}l', NS.xhtml.div,
     NS.xhtml.dl, NS.xhtml.footer, 
     NS.xhtml.h1, NS.xhtml.h2, NS.xhtml.h3, NS.xhtml.h4, NS.xhtml.h5, NS.xhtml.h6,
     NS.xhtml.header, NS.xhtml.hr, NS.xhtml.ins, NS.xhtml.noscript, NS.xhtml.ol, NS.xhtml.p,
